# clever-clown

./: .cargo_runner.toml  .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  kind-config.yaml
src/: config.rs  main.rs
src/domain/: mod.rs  model.rs  port.rs
src/infra/: docker.rs  kubernetes.rs  mod.rs  web.rs
traefik/: 02-traefik-services.yaml  traefik.toml  values.yaml
