[package]
name = "cleverclown"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = { version = "0.17", features = ["buildkit"], optional = true } 
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
tar = "0.4"
flate2 = "1.0"
bytes = "1.7"
futures = "0.3"
uuid = { version = "1.10", features = ["v4"] }
map-macro = "0.3"
async-trait = "0.1"
git2 = "0.19" 
kube = { version = "0.95.0", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.23.0", features = ["latest"], optional = true }
rand = "0.8"
split-iter = "0.1.0"
log = "0.4"
env_logger = "0.11"
axum = "0.7"
itertools = "0.13"
config = "0.14"
serde_derive = "1.0"

[features]
default = ["docker"]
docker = ["dep:bollard"]
kube = ["dep:kube", "dep:k8s-openapi"]